增加网络请求错误api

--- a/MONO/Podfile
+++ b/MONO/Podfile
@@ -6,9 +6,12 @@ pod 'SnapKit'
 pod 'MJRefresh'
 pod 'RxSwift'
 pod 'RxCocoa'
-pod 'Moya'
+pod 'Alamofire'
 pod 'SwiftyJSON'
 pod 'RealmSwift'
 pod 'pop'
+pod 'MBProgressHUD'
+pod 'Hero'
+pod 'Kingfisher'
 
 end
