设置网络路由

--- a/MONO/Podfile
+++ b/MONO/Podfile
@@ -7,7 +7,7 @@ pod 'MJRefresh'
 pod 'RxSwift'
 pod 'RxCocoa'
 pod 'Alamofire'
-pod 'SwiftyJSON'
+pod 'HandyJSON'
 pod 'RealmSwift'
 pod 'pop'
 pod 'MBProgressHUD'
